# p_rob_interface

./: CMakeLists.txt  README.md  package.xml  setup.py
include/p_rob_interface/: p_rob_interface.h
scripts/: python_example.py
src/: p_rob_interface_commands.cpp  p_rob_interface_state.cpp  p_rob_interface_trajectory.cpp
src/p_rob_python_functions/: __init__.py  p_rob_python_functions.py
